--- a/css/estilo.css
+++ b/css/estilo.css
@@ -79,12 +79,12 @@ footer {
     background-color: #1d6ca1; }
   footer .footer-iconos img {
     max-height: 40px; }
-
-.enlacesFooter {
-  background-color: #1d6ca1; }
-
-.footerTexto {
-  color: white; }
+  footer .enlacesFooter {
+    background-color: #1d6ca1; }
+    footer .enlacesFooter .footerTexto {
+      color: white; }
+    footer .enlacesFooter .footerTexto {
+      color: white; }
 
 .enlacesFooter ul {
   list-style-type: none; }
@@ -143,7 +143,7 @@ form {
   flex-direction: row; }
 
 .nosotros-p {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   color: #292828;
   width: 50%; }
 
