--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,6 +103,17 @@ footer {
   .contenedor-politica h5 {
     text-decoration: underline; }
 
+/*PREGUNTAS FRECUENTES*/
+.h2-preguntas {
+  background-color: #bebdbd; }
+
+.preguntas-frecuentes1 {
+  display: flex;
+  flex-direction: column;
+  gap: 70px; }
+  .preguntas-frecuentes1 h3 {
+    text-decoration: underline; }
+
 /* CARDS UBICACION */
 .card-body iframe {
   width: 100%; }
