--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,6 +129,19 @@ h5{
     text-decoration: underline;
   }
 }
+/*PREGUNTAS FRECUENTES*/
+.h2-preguntas{
+  background-color: rgb(190, 189, 189);
+}
+
+.preguntas-frecuentes1{
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  h3{
+    text-decoration: underline;
+  }
+}
 /* CARDS UBICACION */
 .card-body iframe {
   width: 100%;
@@ -243,3 +256,4 @@ form {
     width: 100%;
   }
 }
+
