--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,7 +68,9 @@ header {
 /* footer */
 footer {
   width: 100%;
-  background-color: #0f5b8d; }
+  background-color: #1d6ca1;
+  box-sizing: border-box;
+  padding: 8px; }
   footer p {
     color: white;
     font-size: 25px; }
